dev/demo-ingress/demoapp-ingress.yaml
# combined ingress being tracked here: https://github.com/kubernetes-sigs/aws-alb-ingress-controller/issues/688

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demoapp-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internal
  labels:
    app: demoapp-ingress
spec:
  rules:
    - host: 2048.dev.intranet.local
      http:
        paths:
          - path: /*
            backend:
              serviceName: service-2048
              servicePort: 80
    - host: helloworld.dev.intranet.local
      http:
        paths:
          - path: /*
            backend:
              serviceName: helloworld
              servicePort: 80
